<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="data"
            type="com.akyuz.rickandmorty.model.CharacterInfo" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">





        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.cardview.widget.CardView
                    android:id="@+id/image_card"
                    android:layout_marginTop="20dp"
                    app:cardCornerRadius="10dp"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_width="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_height="wrap_content">
                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/image"

                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:background="@color/white"
                        android:scaleType="fitCenter"
                        app:imageUrl="@{data.image}"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.cardview.widget.CardView>

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/favorite"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_margin="15dp"
                    android:button="@drawable/favorite_selector"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="@id/image_card" />


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    app:layout_constraintTop_toBottomOf="@id/image_card">

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/DetailText"
                        android:text="@string/name"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintWidth_percent="0.35" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/name"
                        style="@style/DetailText"
                        android:text="@{data.name}"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintWidth_percent="0.63" />

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/DetailText"
                        android:layout_width="0dp"
                        android:text="@string/status"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/name"
                        app:layout_constraintWidth_percent="0.35" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/status"
                        style="@style/DetailText"
                        android:text="@{data.status}"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/name"
                        app:layout_constraintWidth_percent="0.63" />

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/DetailText"
                        android:layout_width="0dp"
                        android:text="@string/species"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/status"
                        app:layout_constraintWidth_percent="0.35" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/species"
                        style="@style/DetailText"
                        android:text="@{data.species}"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/status"
                        app:layout_constraintWidth_percent="0.63" />

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/DetailText"
                        android:layout_width="0dp"
                        android:text="@string/numberOfEpisodes"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/species"
                        app:layout_constraintWidth_percent="0.35" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/numberOfEpisodes"
                        style="@style/DetailText"
                        android:text="@{String.valueOf(data.numberOfEpisodes)}"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/species"
                        app:layout_constraintWidth_percent="0.63" />

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/DetailText"
                        android:layout_width="0dp"
                        android:text="@string/gender"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/numberOfEpisodes"
                        app:layout_constraintWidth_percent="0.35" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/gender"
                        style="@style/DetailText"
                        android:text="@{data.gender}"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/numberOfEpisodes"
                        app:layout_constraintWidth_percent="0.63" />

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/DetailText"
                        android:layout_width="0dp"
                        android:text="@string/originLocationName"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/gender"
                        app:layout_constraintWidth_percent="0.35" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/originLocationName"
                        style="@style/DetailText"
                        android:text="@{data.originLocationName}"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/gender"
                        app:layout_constraintWidth_percent="0.63" />

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/DetailText"
                        android:layout_width="0dp"
                        android:text="@string/lastLocationName"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/originLocationName"
                        app:layout_constraintWidth_percent="0.35" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/lastLocationName"
                        style="@style/DetailText"
                        android:text="@{data.lastLocationName}"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/originLocationName"
                        app:layout_constraintWidth_percent="0.63" />

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/DetailText"
                        android:layout_width="0dp"
                        android:text="@string/lastSeenEpisodeName"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/lastLocationName"
                        app:layout_constraintWidth_percent="0.35" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/lastSeenEpisodeName"
                        style="@style/DetailText"
                        android:text="@{data.lastSeenEpisodeName}"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/lastLocationName"
                        app:layout_constraintWidth_percent="0.63" />

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/DetailText"
                        android:layout_width="0dp"
                        android:text="@string/lastSeenEpisodeAirDate"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/lastSeenEpisodeName"
                        app:layout_constraintWidth_percent="0.35" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/lastSeenEpisodeAirDate"
                        style="@style/DetailText"
                        android:text="@{data.lastSeenEpisodeAirDate}"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/lastSeenEpisodeName"
                        app:layout_constraintWidth_percent="0.63" />

                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/back"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:padding="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:background="@android:color/transparent"
            android:src="@drawable/back_selector"/>
    </RelativeLayout>
</layout>